Updated maven dependencies